[gd_scene load_steps=2 format=3 uid="uid://cob6rgiecot0b"]

[ext_resource type="Script" uid="uid://ba6asbday1xxq" path="res://scripts/component_button.gd" id="1_rkuji"]

[node name="ComponentButton" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rkuji")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="StatusIcon" type="TextureRect" parent="HBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3

[node name="ComponentName" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ComponentCategory" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ActionIcon" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
